alteração no conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5/CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam modi ad veniam ipsa tempore ex tempora asperiores nostrum accusantium tenetur quia itaque nulla in, placeat dolore? Aliquam, molestias? Harum, dolores.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In iste repellat qui quidem voluptatum perferendis nihil odit consectetur fuga? Voluptas, delectus! Quasi fuga sapiente illum impedit dolores sint voluptate libero?</p>
         </article>
     </main>
 </body>
